# rsm

./: .travis.yml  CMakeLists.txt  license.txt  readme.md
include/RSM/: build_config.hpp  config.hpp  config_file_descriptor.hpp  logger.hpp  matrix.hpp  matrix.inl  non_copyable.hpp  timer.hpp  timer.inl
include/rsm/: any.hpp  cmdline.hpp  config.hpp  config_file_descriptor.hpp  logger.hpp  matrix.hpp  matrix.inl  timer.hpp  timer.inl  unused.hpp
include/rsm/log/: file_log_device.hpp  log_device.hpp  logger.hpp  stream_log_device.hpp
include/rsm/msg/: async_message_dispatcher.hpp  message.hpp  message_dispatcher.hpp  message_handler.hpp
src/: CMakeLists.txt  config.cpp  config_file_descriptor.cpp  logger.cpp
test/: CMakeLists.txt  main.cpp  test_any.cpp  test_config.cpp  test_log.cpp  test_matrix.cpp  test_message_dispatcher.cpp  test_timer.cpp
